--- a/Feature_Selection/Thesis_Features.ipynb
+++ b/Feature_Selection/Thesis_Features.ipynb
@@ -616,24 +616,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8023062</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2122</td>\n",
-       "      <td>1650.11390</td>\n",
-       "      <td>-0.692690</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023063</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2123</td>\n",
-       "      <td>1650.79720</td>\n",
-       "      <td>-0.677543</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8023064</th>\n",
        "      <td>210526-3-09</td>\n",
        "      <td>2124</td>\n",
@@ -660,9 +642,27 @@
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8023067</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2127</td>\n",
+       "      <td>1653.53080</td>\n",
+       "      <td>-0.640926</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8023089</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2149</td>\n",
+       "      <td>1668.56490</td>\n",
+       "      <td>-0.819178</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2365965 rows × 6 columns</p>\n",
+       "<p>2442090 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -673,13 +673,13 @@
        "306      201210-1-00   306   409.11160   -0.670134  201210-1         Normal\n",
        "307      201210-1-00   307   409.79498   -0.648311  201210-1         Normal\n",
        "...              ...   ...         ...         ...       ...            ...\n",
-       "8023062  210526-3-09  2122  1650.11390   -0.692690  210526-3  Hyperglycemia\n",
-       "8023063  210526-3-09  2123  1650.79720   -0.677543  210526-3  Hyperglycemia\n",
        "8023064  210526-3-09  2124  1651.48060   -0.658122  210526-3  Hyperglycemia\n",
        "8023065  210526-3-09  2125  1652.16410   -0.640630  210526-3  Hyperglycemia\n",
        "8023066  210526-3-09  2126  1652.84740   -0.634646  210526-3  Hyperglycemia\n",
+       "8023067  210526-3-09  2127  1653.53080   -0.640926  210526-3  Hyperglycemia\n",
+       "8023089  210526-3-09  2149  1668.56490   -0.819178  210526-3  Hyperglycemia\n",
        "\n",
-       "[2365965 rows x 6 columns]"
+       "[2442090 rows x 6 columns]"
       ]
      },
      "execution_count": 7,
@@ -688,7 +688,8 @@
     }
    ],
    "source": [
-    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end for start, end in ranges))]\n",
+    "# End +1 makes it include the full any record with that wavenumber\n",
+    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end + 1 for start, end in ranges))]\n",
     "main_peak_areas"
    ]
   },
@@ -701,7 +702,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3045, 779)\n"
+      "(3045, 804)\n"
      ]
     },
     {
@@ -716,10 +717,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5140 +/- 0.0996\n",
-      "ExtraTreesClassifier Cross-Validation Precision: 0.5333 +/- 0.0969\n",
-      "ExtraTreesClassifier Cross-Validation Recall: 0.5314 +/- 0.1286\n",
-      "ExtraTreesClassifier Cross-Validation F1-Score: 0.4953 +/- 0.1062\n"
+      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5213 +/- 0.1016\n",
+      "ExtraTreesClassifier Cross-Validation Precision: 0.5380 +/- 0.1024\n",
+      "ExtraTreesClassifier Cross-Validation Recall: 0.5394 +/- 0.1338\n",
+      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5037 +/- 0.1111\n"
      ]
     }
    ],
@@ -793,7 +794,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end for start, end in ranges))]"
+    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end + 1 for start, end in ranges))]"
    ]
   },
   {
@@ -886,24 +887,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8023047</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2107</td>\n",
-       "      <td>1639.86330</td>\n",
-       "      <td>-0.702838</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023048</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2108</td>\n",
-       "      <td>1640.54680</td>\n",
-       "      <td>-0.710691</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8023049</th>\n",
        "      <td>210526-3-09</td>\n",
        "      <td>2109</td>\n",
@@ -930,9 +913,27 @@
        "      <td>210526-3</td>\n",
        "      <td>Hyperglycemia</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8023052</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2112</td>\n",
+       "      <td>1643.28020</td>\n",
+       "      <td>-0.706087</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8023053</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2113</td>\n",
+       "      <td>1643.96350</td>\n",
+       "      <td>-0.707149</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2780085 rows × 6 columns</p>\n",
+       "<p>2850120 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -943,13 +944,13 @@
        "299      201210-1-00   299   404.32803   -0.723550  201210-1         Normal\n",
        "300      201210-1-00   300   405.01138   -0.711185  201210-1         Normal\n",
        "...              ...   ...         ...         ...       ...            ...\n",
-       "8023047  210526-3-09  2107  1639.86330   -0.702838  210526-3  Hyperglycemia\n",
-       "8023048  210526-3-09  2108  1640.54680   -0.710691  210526-3  Hyperglycemia\n",
        "8023049  210526-3-09  2109  1641.23010   -0.706832  210526-3  Hyperglycemia\n",
        "8023050  210526-3-09  2110  1641.91350   -0.713591  210526-3  Hyperglycemia\n",
        "8023051  210526-3-09  2111  1642.59680   -0.703127  210526-3  Hyperglycemia\n",
+       "8023052  210526-3-09  2112  1643.28020   -0.706087  210526-3  Hyperglycemia\n",
+       "8023053  210526-3-09  2113  1643.96350   -0.707149  210526-3  Hyperglycemia\n",
        "\n",
-       "[2780085 rows x 6 columns]"
+       "[2850120 rows x 6 columns]"
       ]
      },
      "execution_count": 12,
@@ -967,21 +968,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5279 +/- 0.1084\n",
+      "ExtraTreesClassifier Cross-Validation Precision: 0.5413 +/- 0.1080\n",
+      "ExtraTreesClassifier Cross-Validation Recall: 0.5448 +/- 0.1406\n",
+      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5080 +/- 0.1174\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/eddie/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5319 +/- 0.1131\n",
-      "ExtraTreesClassifier Cross-Validation Precision: 0.5485 +/- 0.1055\n",
-      "ExtraTreesClassifier Cross-Validation Recall: 0.5515 +/- 0.1474\n",
-      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5141 +/- 0.1217\n"
      ]
     }
    ],
@@ -1058,11 +1059,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3045, 1058)\n",
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5147 +/- 0.1063\n",
-      "ExtraTreesClassifier Cross-Validation Precision: 0.5330 +/- 0.1009\n",
-      "ExtraTreesClassifier Cross-Validation Recall: 0.5316 +/- 0.1363\n",
-      "ExtraTreesClassifier Cross-Validation F1-Score: 0.4942 +/- 0.1132\n"
+      "(3045, 1077)\n"
      ]
     },
     {
@@ -1072,10 +1069,20 @@
       "/home/eddie/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5393 +/- 0.1194\n",
+      "ExtraTreesClassifier Cross-Validation Precision: 0.5520 +/- 0.1134\n",
+      "ExtraTreesClassifier Cross-Validation Recall: 0.5538 +/- 0.1475\n",
+      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5188 +/- 0.1251\n"
+     ]
     }
    ],
    "source": [
-    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end for start, end in ranges))]\n",
+    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end + 1 for start, end in ranges))]\n",
     "main_peak_areas\n",
     "wavelength_df = prepare_wavelength_df(main_peak_areas, 'Absorbance')\n",
     "print(wavelength_df.shape)\n",
@@ -1133,6 +1140,8 @@
    "source": [
     "# Wavenumber ranges from the thesis\n",
     "ranges = [\n",
+    "\n",
+    "    # Hyperglycaemic\n",
     "    (407, 495), (453, 454), (516, 537), (519, 519), (603, 738),\n",
     "    (620, 624), (821, 839), (886, 887), (972, 972), (1000, 1003),\n",
     "    (1030, 1036), (1060, 1078), (1132, 1152), (1170, 1170),\n",
@@ -1153,18 +1162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3045, 1349)\n",
-      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5448 +/- 0.1077\n",
-      "ExtraTreesClassifier Cross-Validation Precision: 0.5559 +/- 0.1064\n",
-      "ExtraTreesClassifier Cross-Validation Recall: 0.5631 +/- 0.1441\n",
-      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5262 +/- 0.1188\n"
+      "(3045, 1378)\n"
      ]
     },
     {
@@ -1174,14 +1179,48 @@
       "/home/eddie/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier Cross-Validation Accuracy: 0.5450 +/- 0.1043\n",
+      "ExtraTreesClassifier Cross-Validation Precision: 0.5602 +/- 0.1028\n",
+      "ExtraTreesClassifier Cross-Validation Recall: 0.5639 +/- 0.1423\n",
+      "ExtraTreesClassifier Cross-Validation F1-Score: 0.5252 +/- 0.1146\n"
+     ]
     }
    ],
    "source": [
-    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end for start, end in ranges))]\n",
+    "main_peak_areas = df[df['WaveNumber'].apply(lambda x: any(start <= x <= end + 1 for start, end in ranges))]\n",
     "main_peak_areas\n",
     "wavelength_df = prepare_wavelength_df(main_peak_areas, 'Absorbance')\n",
     "print(wavelength_df.shape)\n",
     "evaluate_model(wavelength_df, et)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Percentage of the spectra considered important**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the Spectra considered important: 0.5222\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Percentage of the Spectra considered important: {len(main_peak_areas['WaveNumber'].drop_duplicates()) / len(df['WaveNumber'].drop_duplicates()):.4f}\")"
    ]
   },
   {
@@ -1193,17 +1232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "thesis_wavenumbers = main_peak_areas['WaveNumber'].drop_duplicates()\n",
-    "thesis_wavenumbers.to_csv(\"../data\")"
+    "thesis_wavenumbers.to_csv(\"../data/thesis_wavenumbers.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
