--- a/Final_Results/Best_Accuracy_Cleaning_Parameters.ipynb
+++ b/Final_Results/Best_Accuracy_Cleaning_Parameters.ipynb
@@ -1002,19 +1002,19 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.70      0.74      0.72        19\n",
-      " Hypoglycemia       0.82      0.64      0.72        22\n",
-      "       Normal       0.58      0.68      0.62        22\n",
+      "Hyperglycemia     0.7000    0.7368    0.7179        19\n",
+      " Hypoglycemia     0.8235    0.6364    0.7179        22\n",
+      "       Normal     0.5769    0.6818    0.6250        22\n",
       "\n",
-      "     accuracy                           0.68        63\n",
-      "    macro avg       0.70      0.69      0.69        63\n",
-      " weighted avg       0.70      0.68      0.69        63\n",
+      "     accuracy                         0.6825        63\n",
+      "    macro avg     0.7002    0.6850    0.6870        63\n",
+      " weighted avg     0.7002    0.6825    0.6855        63\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus']))"
+    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus'], digits=4))"
    ]
   }
  ],
