--- a/Final_Results/Best_F1_Cleaning_Parameters.ipynb
+++ b/Final_Results/Best_F1_Cleaning_Parameters.ipynb
@@ -1002,19 +1002,19 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.67      0.74      0.70        19\n",
-      " Hypoglycemia       0.82      0.64      0.72        22\n",
-      "       Normal       0.56      0.64      0.60        22\n",
+      "Hyperglycemia     0.6667    0.7368    0.7000        19\n",
+      " Hypoglycemia     0.8235    0.6364    0.7179        22\n",
+      "       Normal     0.5600    0.6364    0.5957        22\n",
       "\n",
-      "     accuracy                           0.67        63\n",
-      "    macro avg       0.68      0.67      0.67        63\n",
-      " weighted avg       0.68      0.67      0.67        63\n",
+      "     accuracy                         0.6667        63\n",
+      "    macro avg     0.6834    0.6699    0.6712        63\n",
+      " weighted avg     0.6842    0.6667    0.6699        63\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus']))"
+    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus'], digits=4))"
    ]
   }
  ],
