--- a/Final_Results/Best_F1_Cleaning_And_PageRank_Parameters_With_Feature_Selection.ipynb
+++ b/Final_Results/Best_F1_Cleaning_And_PageRank_Parameters_With_Feature_Selection.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "34  1786.10470"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "[1376 rows x 1 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "[54740 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
        "Name: SpecID, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
        "Name: SurID, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
        "[63 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1687,19 +1687,19 @@
      "text": [
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.74      0.89      0.81        19\n",
-      " Hypoglycemia       0.78      0.82      0.80        22\n",
-      "       Normal       0.82      0.64      0.72        22\n",
+      "Hyperglycemia     0.7391    0.8947    0.8095        19\n",
+      " Hypoglycemia     0.7826    0.8182    0.8000        22\n",
+      "       Normal     0.8235    0.6364    0.7179        22\n",
       "\n",
-      "     accuracy                           0.78        63\n",
-      "    macro avg       0.78      0.78      0.78        63\n",
-      " weighted avg       0.78      0.78      0.77        63\n",
+      "     accuracy                         0.7778        63\n",
+      "    macro avg     0.7818    0.7831    0.7758        63\n",
+      " weighted avg     0.7838    0.7778    0.7742        63\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus']))"
+    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus'], digits=4))"
    ]
   }
  ],
